# videoprism

./: main.py  pyproject.toml
docs/: EXPLAINER.md  MULTIMODAL_RAG_AND_ADAPTERS.md  USAGE_EXAMPLE.md
