[project]
name = "videoprism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "einops>=0.8.1",
    "einshape>=1.0",
    "flax>=0.10.7",
    "huggingface-hub>=0.34.4",
    "numpy>=1.26",
    "sentencepiece>=0.2.1",
    "tensorflow-cpu>=2.20.0",
]
